mux-compiler/tests/snapshots/executable_integration__executable_integration__parser_missing_import_path.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Expected module path, found newline
--> test_scripts/error_cases/parser_missing_import_path.mux:2:7
   |
 2 | import
   |       ^
